--- a/SQLFormatter.html
+++ b/SQLFormatter.html
@@ -9,70 +9,27 @@
 <body class="bg-gray-100 p-6">
     <div class="max-w-4xl mx-auto bg-white rounded-lg shadow-lg p-6">
         <h1 class="text-2xl font-bold mb-4">SQL Formatter written by Chat-GPT</h1>
-
-        <textarea id="sqlInput" class="w-full h-48 p-2 border border-gray-300 rounded-lg mb-4" placeholder="Enter your SQL code here..."></textarea>
-
+        <textarea id="sqlInput" class="w-full h-48 p-2 border border-gray-300 rounded-lg mb-4" placeholder="Enter your SQL code here..." autofocus></textarea>
         <div class="flex items-center mb-4">
             <button id="formatButton" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600">Format SQL</button>
-
             <button id="copyButton" class="bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 ml-2">Copy to Clipboard</button>
-
             <button id="resetButton" class="bg-red-500 text-white px-4 py-2 rounded-lg hover:bg-red-600 ml-2">Reset</button>
-
-            <button id="downloadButton" class="bg-yellow-500 text-white px-4 py-2 rounded-lg hover:bg-yellow-600 ml-2">Download</button>
         </div>
-        
         <h2 class="text-lg font-semibold mt-6">Formatted SQL:</h2>
         <pre id="formattedOutput" class="mt-2 bg-gray-200 p-4 rounded-lg overflow-auto"></pre>
         <div id="notification" class="mt-4 hidden bg-green-100 text-green-700 p-2 rounded-lg"></div>
     </div>
 
+    <div class="max-w-4xl mx-auto mt-4 text-center">
+        <p class="text-gray-700">Credit to <a href="https://www.openai.com" class="text-blue-500 hover:underline">Chat-GPT</a></p>
+        <p class="text-gray-500 text-sm">&copy; 2024 OpenAI. All rights reserved.</p>
+    </div>
+
     <script>
-        window.onload = function() {
-            document.getElementById('sqlInput').focus();
-        };
-
-        document.getElementById('formatButton').addEventListener('click', function() {
-            const sqlInput = document.getElementById('sqlInput').value;
-            if (!sqlInput.trim()) {
-                showNotification('Please enter some SQL code to format.', 'error');
-                return;
-            }
-            const formattedOutput = formatSQL(sqlInput);
-            document.getElementById('formattedOutput').textContent = formattedOutput;
-            showNotification('SQL formatted successfully!', 'success');
-        });
-
-        document.getElementById('copyButton').addEventListener('click', function() {
-            const formattedText = document.getElementById('formattedOutput').textContent;
-            navigator.clipboard.writeText(formattedText)
-                .then(() => showNotification('Copied to clipboard!', 'success'))
-                .catch(err => showNotification('Failed to copy: ' + err, 'error'));
-        });
-
-        document.getElementById('resetButton').addEventListener('click', function() {
-            document.getElementById('sqlInput').value = '';
-            document.getElementById('formattedOutput').textContent = '';
-            showNotification('Input cleared!', 'success');
-        });
-
-        document.getElementById('downloadButton').addEventListener('click', function() {
-            const formattedText = document.getElementById('formattedOutput').textContent;
-            const blob = new Blob([formattedText], { type: 'text/plain' });
-            const url = URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = 'formatted.sql';
-            document.body.appendChild(a);
-            a.click();
-            document.body.removeChild(a);
-            showNotification('Download started!', 'success');
-        });
-
+        // Function to format SQL
         function formatSQL(sql) {
-            // Remove double quotes, ampersands, and underscores
-            sql = sql.replace(/["&]/g, ''); // Remove double quotes and ampersands
-            sql = sql.replace(/_/g, ''); // Remove underscores
+            // Remove unwanted characters
+            sql = sql.replace(/["&]/g, '').replace(/_/g, '');
 
             // Define SQL keywords
             const sqlKeywords = [
@@ -82,33 +39,59 @@
                 'ON', 'AND', 'OR', 'NOT', 'AS', 'IN'
             ];
 
-            // Convert keywords to uppercase
+            // Capitalize keywords
             sqlKeywords.forEach(keyword => {
                 const regex = new RegExp(`\\b${keyword}\\b`, 'gi');
                 sql = sql.replace(regex, keyword.toUpperCase());
             });
 
             // Format the SQL string
-            return sql
-                .replace(/(\bSELECT\b|\bFROM\b|\bWHERE\b|\bJOIN\b|\bINNER JOIN\b|\bLEFT JOIN\b|\bRIGHT JOIN\b|\bGROUP BY\b|\bORDER BY\b|\bINSERT INTO\b|\bVALUES\b|\bUPDATE\b|\bSET\b|\bDELETE FROM\b|\bON\b|\bAND\b|\bOR\b|\bNOT\b|\bAS\b|\bIN\b)/g, '\n$&') // Start keywords on new lines
-                .replace(/(\s*FROM\s*\()/gi, 'FROM (') // Keep opening parenthesis on the same line
-                .replace(/(\(\s*SELECT)/gi, '(SELECT') // Keep opening parenthesis and SELECT on the same line
-                .replace(/(\s*SELECT\s+)/gi, '\n    SELECT ') // Indent SELECT inside subqueries
-                .replace(/\s*\)/g, ')') // Keep closing parenthesis on the same line as the previous element
+            sql = sql
+                .replace(/(\bSELECT\b|\bFROM\b|\bWHERE\b|\bJOIN\b|\bINNER JOIN\b|\bLEFT JOIN\b|\bRIGHT JOIN\b|\bGROUP BY\b|\bORDER BY\b|\bINSERT INTO\b|\bVALUES\b|\bUPDATE\b|\bSET\b|\bDELETE FROM\b|\bON\b)/g, '\n$&') // Start keywords on new lines
+                .replace(/\b(IN|AS)\b/g, '$&') // Keep IN and AS on the same line
                 .replace(/;\s*/g, ';\n') // Add line after each semicolon
+                .replace(/(\(\s*\n?\s*SELECT)/g, '(\n    SELECT') // Indent subqueries
                 .replace(/\n\s*\n/g, '\n') // Remove extra blank lines
-                .trim(); // Clean up leading/trailing whitespace
+                .replace(/(\bAND\b|\bOR\b|\bNOT\b)/g, ' $&') // Keep AND, OR, NOT on the same line
+                .trim(); // Trim whitespace
+
+            return sql;
         }
 
-        function showNotification(message, type) {
+        // Notification function
+        function showNotification(message) {
             const notification = document.getElementById('notification');
             notification.textContent = message;
             notification.classList.remove('hidden');
-            notification.classList.add(type === 'success' ? 'bg-green-100 text-green-700' : 'bg-red-100 text-red-700');
             setTimeout(() => {
                 notification.classList.add('hidden');
             }, 3000);
         }
+
+        // Event listeners
+        document.getElementById('formatButton').addEventListener('click', function() {
+            const sqlInput = document.getElementById('sqlInput').value;
+            if (!sqlInput.trim()) {
+                showNotification('Please enter some SQL code to format.');
+                return;
+            }
+            const formattedOutput = formatSQL(sqlInput);
+            document.getElementById('formattedOutput').textContent = formattedOutput;
+            showNotification('SQL formatted successfully!');
+        });
+
+        document.getElementById('copyButton').addEventListener('click', function() {
+            const formattedText = document.getElementById('formattedOutput').textContent;
+            navigator.clipboard.writeText(formattedText)
+                .then(() => showNotification('Copied to clipboard!'))
+                .catch(err => showNotification('Failed to copy: ' + err));
+        });
+
+        document.getElementById('resetButton').addEventListener('click', function() {
+            document.getElementById('sqlInput').value = '';
+            document.getElementById('formattedOutput').textContent = '';
+            showNotification('Input cleared!');
+        });
     </script>
 </body>
 </html>
